--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,19 +1,6 @@
 ---
-- name: Install Packages | apt
-  apt:
-    state: latest
-    pkg: "{{ item }}"
-  with_items:
-    - nfs-common
+- include: client.yml
   when: nfs_client
-  tags:
-    - nfs
-    - software-installation
-    - using-apt
 
-- name: mount
-  mount:
-    state: mounted
-    fstype: nfs
-    src: "{{ nfs_client_source }}"
-    name: "{{ nfs_client_mount_point }}"
+- include: server.yml
+  when: nfs_server
